[package]
name = "remote_types"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
color-eyre = "0.6.2"
flate2 = "1.0.26"
log = "0.4.19"
once_cell = "1.18.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.43"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.5.1", features = [
  "trace",
  "cors",
  "compression-gzip",
] }
tower-request-id = "0.3.0"
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.7"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
utoipa = { version = "4.2.0", features = ["preserve_order", "axum_extras"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }

[profile.dev.package.backtrace]
opt-level = 3
